styles/wikiStyles.scss
.wiki-body {
  * {
    color: rgb(209, 213, 219);
  }

  a {
    color: var(--custom-primary);

    &:visited {
      color: var(--custom-secondary);
    }
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    color: white;
  }

  h2 {
    font-size: 1.5rem;
    margin: 1rem 0;
  }

  h3 {
    font-size: 1.22rem;
    margin-bottom: 0.6rem;
  }

  h4 {
    font-size: 1.2rem;
    margin-bottom: 0.5rem;
  }

  h5 {
    font-size: 1.15rem;
    margin-bottom: 0.45rem;
  }

  img {
    border-radius: 4px;
  }

  table,
  .infobox {
    background-color: #444444;
    border-radius: 4px;
    border-collapse: collapse;
    box-shadow: var(--custom-box-shadow);
    border: none;

    th,
    td {
      padding: 0.75rem;
      border: 1px solid #22222250;
    }

    table {
      box-shadow: none;
    }

    img {
      margin: auto;
    }
  }

  figure {
    background-color: unset;
    box-shadow: var(--custom-box-shadow);
    border-radius: 4px;

    figcaption {
      text-align: center !important;
    }
  }

  // .infobox {
  //   float: right;
  //   clear: right;
  //   margin: 0 0 1rem 1rem;
  // }

  .hatnote,
  figcaption {
    font-size: 0.75rem;
  }

  // .gallery {
  //   text-align: center;
  //   overflow-x: hidden;

  //   .gallerybox {
  //     display: inline-grid;
  //     text-overflow: ellipsis;
  //     margin: 0.5rem;

  //     .gallerytext {
  //       display: inline;
  //       white-space: nowrap;
  //       text-overflow: ellipsis;
  //       overflow: hidden;
  //     }
  //   }
  // }

  // .thumbinner,
  // .multiimageinner {
  //   width: unset !important;
  //   max-width: unset !important;
  // }

  // .thumb.tmulti .trow {
  //   display: flex;
  //   flex-wrap: wrap;
  //   gap: 1rem;
  //   margin: 1rem;
  // }

  // .tright {
  //   float: right;
  //   clear: right;
  // }

  // .tleft {
  //   float: left;
  //   clear: left;
  // }
}

